Avoid dropdown menus expanding out of viewport

--- a/contribs/gmf/src/sass/base.scss
+++ b/contribs/gmf/src/sass/base.scss
@@ -171,3 +171,9 @@ i, cite, em, var, address, dfn {
   font-size: 2rem;
   margin: 20px 45%;
 }
+
+// Avoid dropdown menus expanding out of viewport
+.dropdown-menu {
+  max-height: 80vh;
+  overflow-y: auto;
+}
